refactor: refactored map architecture